2002-09-20  Padraig O'Briain  <padraig.obriain@sun.com>

	* components/adapter/Makefile.am:
	* components/hardware/Makefile.am:
	* components/history/Makefile.am:
	* components/loser/content/Makefile.am:
	* components/loser/sidebar/Makefile.am:
	* components/music/Makefile.am:
	* components/notes/Makefile.am:
	* components/sample/Makefile.am:
	* components/text/Makefile.am:
	* components/throbber/Makefile.am:
	* components/tree/Makefile.am:
	Add CLEANFILES so that make clean deletes $(server_DATA) and
	$(server_DATA).in

2002-09-19  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/gnome-icon-lookup.c:
	* libnautilus-private/gnome-thumbnail-pixbuf-utils.c:
	* libnautilus-private/gnome-thumbnail.c:
	Write docs.

2002-09-19  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-factory.c (ICON_NAME_THUMBNAIL_LOADING):
	Correct thumbnail loading icon.

	* libnautilus-private/nautilus-file.c (update_info_internal):
	Don't invalidate DISPLAY_NAME for all files, since this will re-load
	file_info making directory loads very slow! As a workaround, only do
	this if file->details->display_name is already set. I don't know
	if this is the correct way though.

2002-09-18  Alexander Larsson  <alexl@redhat.com>

	Merge the new-icon-factory-branch branch to HEAD.
	
2002-09-18  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/gnome-icon-lookup.c:
	* libnautilus-private/nautilus-bookmark.c:
	* src/file-manager/fm-desktop-icon-view.c:
	Final icon naming.

2002-09-18  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-factory.c:
	Compile fixes for gnome-desktop head.

2002-09-17  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/gnome-icon-lookup.c:
	Also look for generic mimetypes.
	
2002-09-17  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/gnome-icon-lookup.c:
	Clean up #defines

2002-09-17  Alexander Larsson  <alexl@redhat.com>
