@@ -1,3 +1,8 @@
+2002-09-21  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-factory.c:
+	Some small performance enhancements
+
 2002-09-20  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* components/adapter/Makefile.am:
